--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/register": "^7.7.4",
     "autoprefixer": "^9.7.2",
     "browser-sync": "^2.26.7",
+    "css-mqpacker": "^7.0.0",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
@@ -33,6 +34,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
+    "postcss-combine-media-query": "^1.0.0",
     "posthtml-include": "^1.3.2"
   }
 }
