--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-csso": "^4.0.1",
+    "gulp-html-minify": "0.0.14",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-posthtml": "^3.0.4",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-svg-symbol-sprite": "^2.0.1",
+    "gulp-svgmin": "^2.2.0",
+    "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.2",
     "posthtml-include": "^1.3.2"
   }
